--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta property="og:image:height" content="231">
     <meta name="description" content="Portfolio">
     <link href="https://fonts.googleapis.com/css?family=Bangers|Kaushan+Script|Caveat|Montserrat|Quicksand&subset=Latin-ext" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="style.5abead92941f6aa3bacf.css" rel="stylesheet"></head>
   <body>
     <header>
       <div class="logo">
@@ -184,14 +184,7 @@
           <textarea class="form__textarea" id="text" name="text" placeholder="Leave your message here"></textarea>
           <input class="form__inputSubmit" type="submit" value="Send">
         </form>
-        <!-- <div class="phoneEmail">
-          <a href="mailto:szy.majewski@gmail.com">
-            <div class="phoneEmail__email">
-              <img class="phoneEmail__email__img" src="assets/images/email.png">
-              <p class="phoneEmail__email__p">szy.majewski@gmail.com</p>
-            </div>
-          </a>
-        </div> -->
+        
         <div class="scrollText">
           <a href="#intro" class="scrollText__anchor">
             <p>scroll to the top</p>
@@ -203,9 +196,6 @@
         <p>&copy; possibleSolutions</p>
       </footer>
     </div>
-    <script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="main.5abead92941f6aa3bacf.js"></script></body>
 </html>
